[tool.poetry]
name = "waltti-apc-pilot-analysis"
version = "0.1.0"
description = "Analyze Waltti-APC pilot results."
license = "EUPL-1.2"
authors = ["haphut <haphut@mistmap.com>"]
readme = "README.md"
repository = "https://github.com/tvv-lippu-ja-maksujarjestelma-oy/waltti-apc-pilot-analysis"
packages = [{include = "waltti_apc_pilot_analysis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pulsar-client = "^3.1.0"
polars = "^0.17.2"
python-dotenv = "^1.0.0"
gtfs-realtime-bindings = "^1.0.0"
pyarrow = "^14.0.1"
plotly = "^5.14.1"
pandas = "^2.0.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.black]
line-length = 79
